# unieject

./: .gitignore  AUTHORS  Doxyfile.in  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  svn2authors.sed  unieject.c  unieject.conf.sample
lib/: Makefile.am  eject.c  freebsd.c  libunieject.pc.in  linux.c  lock.c  mounts.c  open.c  slotchanger.c  speed.c  unieject.h  unieject_internal.h  utils.c
m4/: Makefile.am  attributes.m4  c99.m4  doxygen.m4  gsed.m4  txt2man.m4
manpages/: Makefile.am  libunieject_setspeed.3.txt2man  unieject.1.txt2man  unieject.1.xml  unieject.conf.5.txt2man  unieject.conf.5.xml  unieject.conf.mxml  unieject.mxml
po/: LINGUAS  Makevars  POTFILES.in  de.po  es_AR.po  es_ES.po  it.po  nl.po  pt.po  pt_BR.po
unieject/: AUTHORS  Doxyfile.in  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  unieject.c  unieject.conf.sample
unieject/lib/: Makefile.am  eject.c  freebsd.c  linux.c  lock.c  mounts.c  open.c  slotchanger.c  speed.c  unieject.h  unieject_internal.h  utils.c
unieject/m4/: Makefile.am  gsed.m4
unieject/manpages/: Makefile.am  unieject.1.txt2man  unieject.mxml
unieject/po/: Makevars  POTFILES.in
